<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.clokey.shasta.courtcounter.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="2">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:id="@+id/team_a_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/team_a_name"
                android:gravity="center"
                android:textSize="14sp"
                android:textColor="#616161"
                android:fontFamily="sans-serif-medium"/>

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/total_points_team_a"
                android:textSize="56sp"
                android:textColor="#000000"
                android:fontFamily="sans-serif-light"/>

            <Button
                android:text="@string/three_pointer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:onClick="add3Points"/>

            <Button
                android:text="@string/two_pointer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:onClick="add2Points"/>

            <Button
                android:text="@string/free_throw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:onClick="add1Point"/>


        </LinearLayout>

        <View
            android:layout_width="2dp"
            android:layout_height="320dp"
            android:background="#616161"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:id="@+id/team_b_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/team_b_name"
                android:gravity="center"
                android:textSize="14sp"
                android:textColor="#616161"
                android:fontFamily="sans-serif-medium"/>

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/total_points_team_b"
                android:textSize="56sp"
                android:textColor="#000000"
                android:fontFamily="sans-serif-light"/>

            <Button
                android:text="@string/three_pointer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:onClick="add3Points"/>

            <Button
                android:text="@string/two_pointer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:onClick="add2Points"/>

            <Button
                android:text="@string/free_throw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:onClick="add1Point"/>


        </LinearLayout>
    </LinearLayout>

    <Button
        android:text="@string/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:onClick="resetScores"
        android:layout_gravity="center"/>

</LinearLayout>